[gd_scene load_steps=4 format=3 uid="uid://b20pi33j48r0w"]

[ext_resource type="Script" uid="uid://ds63fl31h6ipn" path="res://Stages/UI/game_over_ui.gd" id="1_4qr0f"]

[sub_resource type="LabelSettings" id="LabelSettings_4qr0f"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_ppdfo"]
font_size = 36

[node name="GameOverUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_4qr0f")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -180.0
offset_right = 46.0
offset_bottom = -157.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_4qr0f")
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.5
offset_top = -120.0
offset_right = 103.5
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
text = "Final Score: "
label_settings = SubResource("LabelSettings_ppdfo")

[node name="Panel" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayAgainButton" type="Button" parent="Panel/Panel"]
layout_mode = 2
size_flags_horizontal = 0
text = "Play Again"

[node name="QuitButton" type="Button" parent="Panel/Panel"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Panel/Panel/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="Panel/Panel/QuitButton" to="." method="_on_quit_button_pressed"]
